--- a/sled_data/templates/sled_data/catalogue_detail.html
+++ b/sled_data/templates/sled_data/catalogue_detail.html
@@ -10,15 +10,15 @@
 <div class="jb-container-modal jb-table-no-lines">
   
   <table>
-    <tr><td>Owner:</td><td>{{ catalogue.owner }}</td></tr>
+    <tr><td>Owner:</td><td>{{ catalogue.owner.id|get_user_link|safe }}</td></tr>
     <tr><td>Access level:</td><td>{{ catalogue.access_level }}</td></tr>
     <tr><td>Date taken:</td><td>{{ catalogue.date_taken }}</td></tr>
     <tr><td>RA:</td><td>{{ catalogue.radet }}</td></tr>
     <tr><td>DEC:</td><td>{{ catalogue.decdet }}</td></tr>
-    <tr><td>mag:</td><td>{{ catalogue.mag }}</td></tr>
-    <tr><td>Dmag:</td><td>{{ catalogue.Dmag }}</td></tr>
-    <tr><td>Distance:</td><td>{{ catalogue.distance }}</td></tr>
-    <tr><td>Info:</td><td>{{ catalogue.info }}</td></tr>
+    <tr><td>Mag:</td><td>{{ catalogue.mag }}</td></tr>
+    <tr><td>&Delta; Mag:</td><td>{{ catalogue.Dmag|default:"-" }}</td></tr>
+    <tr><td>Distance [arcsec]:</td><td>{{ catalogue.distance|default:"-" }}</td></tr>
+    <tr><td>Info:</td><td>{{ catalogue.info|default:"-" }}</td></tr>
   </table>
   
   {% if catalogue.future %}
