--- a/sled_data/templates/sled_data/catalogue_create.html
+++ b/sled_data/templates/sled_data/catalogue_create.html
@@ -23,61 +23,16 @@ Add Catalogue data?
     {{ form.lens }}
     <table>
       <tbody>
+	{% for field in form.visible_fields %}
 	<tr>
-	  <td>{{ form.instrument.error }}</td>
-	  <td>{{ form.instrument.label_tag }}</td>
-	  <td>{{ form.instrument }}</td>
+	  <td>{{ field.error }}</td>
+          <td>
+	    <div class="sled-help-tooltip">{{ field.label_tag }}</div>
+	    <div class="sled-help-tooltip-content">{{ field.help_text|safe }}</div>
+	  </td>
+	  <td>{{ field }}</td>
 	</tr>
-	<tr>
-	  <td>{{ form.band.error }}</td>
-	  <td>{{ form.band.label_tag }}</td>
-	  <td>{{ form.band }}</td>
-	</tr>
-	<tr>
-	  <td>{{ form.access_level.error }}</td>
-	  <td>{{ form.access_level.label_tag }}</td>
-	  <td>{{ form.access_level }}</td>
-	</tr>
-	<tr>
-	  <td>{{ form.future.error }}</td>
-	  <td>{{ form.future.label_tag }}</td>
-	  <td>{{ form.future }}</td>
-	</tr>
-	<tr>
-	  <td>{{ form.date_taken.error }}</td>
-	  <td>{{ form.date_taken.label_tag }}</td>
-	  <td>{{ form.date_taken }}</td>
-	</tr>
-	<tr>
-	  <td>{{ form.radet.error }}</td>
-	  <td>{{ form.radet.label_tag }}</td>
-	  <td>{{ form.radet }}</td>
-	</tr>
-	<tr>
-	  <td>{{ form.decdet.error }}</td>
-	  <td>{{ form.decdet.label_tag }}</td>
-	  <td>{{ form.decdet }}</td>
-	</tr>
-	<tr>
-	  <td>{{ form.mag.error }}</td>
-	  <td>{{ form.mag.label_tag }}</td>
-	  <td>{{ form.mag }}</td>
-	</tr>
-	<tr>
-	  <td>{{ form.Dmag.error }}</td>
-	  <td>{{ form.Dmag.label_tag }}</td>
-	  <td>{{ form.Dmag }}</td>
-	</tr>
-	<tr>
-	  <td>{{ form.distance.error }}</td>
-	  <td>{{ form.distance.label_tag }}</td>
-	  <td>{{ form.distance }}</td>
-	</tr>
-	<tr>
-	  <td>{{ form.info.error }}</td>
-	  <td>{{ form.info.label_tag }}</td>
-	  <td>{{ form.info }}</td>
-	</tr>
+	{% endfor %}
       </tbody>
     </table>
   </div>
@@ -87,6 +42,10 @@ Add Catalogue data?
 
 
 {% block extrascripts %}
+<script type="text/javascript" src="{% static 'js/set_help.js' %}"></script>
+<script type="text/javascript">
+  set_help();
+</script>
 {% endblock extrascripts %}
 
 
