--- a/templates/master_header.html
+++ b/templates/master_header.html
@@ -6,11 +6,10 @@
   <head>
     <meta charset="UTF-8">
     <title>Strong Gravitational Lens database</title>
-    <link rel="icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">
-    
-    <!-- The line below is required to style the message -->
+    <link rel="icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">    
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" type="text/css" href="{% static 'css/global.css' %}" /> -->
+    <link rel="stylesheet" type="text/css" href="{% static 'css/vendors/tooltipster.bundle.min.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/vendors/tooltipster-sideTip-shadow.min.css' %}" />
     <link href="{% static 'css/jb_style.css' %}" rel="stylesheet" />
     <link href="{% static 'css/sled-global.css' %}" rel="stylesheet" />
     {% block extrastyles %}
@@ -19,6 +18,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous" type="text/javascript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
     <script src="https://use.typekit.net/pkl4bli.js" type="text/javascript"></script>
+    <script src="{% static 'js/tooltipster.bundle.min.js' %}" type="text/javascript"></script>
     <script type="text/javascript">
       WebFont.load({
 	  google: {
