--- a/lenses/static/lenses/css/lens_query.css
+++ b/lenses/static/lenses/css/lens_query.css
@@ -1,38 +1,34 @@
-.data-form {
-    height:300px;
+.instructions {
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
-.data-form table tr td:nth-child(2) {
+
+
+.data-form {
+    height: 450px;
+    padding-top: 25px;
+}
+
+.data-form-table > tbody > tr > td:nth-child(2) {
     text-align:right;
     padding-right: 20px;
 }
 
-.data-form table tr td:nth-child(3) {
+.data-form-table > tbody > tr > td:nth-child(3) {
     text-align:left;
     padding-right: 20px;
-    width:180px;
+    width: 150px;
 }
 
-.data-form table tr td:nth-child(4) {
+.data-form-table > tbody > tr > td:nth-child(4) {
     text-align:left;
     padding-right: 20px;
 }
 
 
 
-.instructions {
-    padding-top: 40px;
-    padding-bottom: 40px;
-}
 
-
-
-.surro {
-    display: inline;
-    float:left;
-    padding-top:12px;
-    padding-right:12px;
-}
 
  /* The switch - the box around the slider */
 .switch {
@@ -40,6 +36,7 @@
   display: inline-block;
   width: 30px;
   height: 17px;
+  margin: 0px 6px;
 }
 
 /* Hide default HTML checkbox */
@@ -98,7 +95,27 @@ input:checked + .slider:before {
 } 
 
 
+
+.sled-lens-table {
+    table-layout: fixed;
+    width:800px;
+    margin: 0px auto;
+}
+
+.sled-lens-table > tbody > tr > td:nth-child(1) {
+    width: 350px;
+    padding-right:40px;
+}
+.sled-lens-table > tbody > tr > td:nth-child(2) {
+    width: 350px;
+    padding-left:40px;
+}
+
+.sled-cone-box {
+    width: 380px;
+}
+
 .taba {
   height: 130px;
-  width: 400px;
+  width: 350px;
 }
