Modified the export CSV functionality. Now all buttons on the query page can work with all the ids (the entire queryset) or just with what is selected.

--- a/lenses/templates/lenses/csv_download.html
+++ b/lenses/templates/lenses/csv_download.html
@@ -17,8 +17,10 @@ Download as csv?
     </ul>
   </div>
   {% endif %}
+  
+  You will download details for {{ form.N.value }} lenses
 
-You will download details for {{ items.count }} systems
+  {{ form.ids }}
 
 </div>
 {% endblock content %}
