--- a/lenses/templates/lenses/lens_index.html
+++ b/lenses/templates/lenses/lens_index.html
@@ -10,7 +10,7 @@
     <img src="{% static 'images/JB_Lenses_Query.png' %}" loading="lazy" width="100" height="100" alt="">
     <h1 class="jb-heading-2">Query lenses</h1>
   </a>
-  <a href="{% url 'lenses:lens-all-collections' %}" class='jb-div-block-3'>
+  <a href="{% url 'sled_queries:lens-all-collections' %}" class='jb-div-block-3'>
     <img src="{% static 'images/JB_Lenses_Browse.png' %}" loading="lazy" width="100" height="100" alt="">
     <h1 class="jb-heading-2">Standardised (static?) Queries</h1>
   </a>
