--- a/lenses/templates/lenses/lens_query.html
+++ b/lenses/templates/lenses/lens_query.html
@@ -577,14 +577,9 @@
       See collage
     </button>
 
-    <!--<button type="button" id="export-csv" class="sled-process-lenses jb-submit-button-1" data-form-url="{% url 'lenses:export-csv' %}">
-      <img src="{% static 'icons/columns-gap.svg' %}">
-      Export to csv
-    </button>-->
-
-    <button type="button" id="export" class="sled-export-function jb-submit-button-1" data-form-url="{% url 'lenses:export-csv' all_lens_ids|default:'none' %}">
+    <button type="button" id="export-csv" class="sled-process-lenses jb-submit-button-1" data-form-url="{% url 'lenses:export-csv' %}">
       <img src="{% static 'icons/folder-fill.svg' %}">
-      Export all lenses
+      Export to csv
     </button>
 
     <button type="button" id="make-collection" class="sled-process-lenses jb-submit-button-1" data-form-url="{% url 'sled_collections:collection-create' 'Lenses' %}">
