--- a/sled_users/templates/sled_users/user_visit_card.html
+++ b/sled_users/templates/sled_users/user_visit_card.html
@@ -8,6 +8,12 @@
     <tr>
       <td>
 	<h1 class="jb-heading-1">{{ sled_user.first_name }} {{ sled_user.last_name }} ({{ sled_user.username }})</h1>
+	<a href="mailto:{{sled_user.email}}?subject=SLED communication:&body=The message">
+	  <button class="jb-submit-button-1">
+	    <img src="{% static 'icons/send-fill.svg' %}" >
+	    Contact
+	  </button>
+	</a>
 	<p>
 	  Joined on {{ sled_user.date_joined }}, last login {{ sled_user.last_login|timesince }} ago
 	</p>
