In lens query, check to see if query set is empty before performing any operation.

--- a/lenses/templates/lenses/lens_query.html
+++ b/lenses/templates/lenses/lens_query.html
@@ -563,6 +563,7 @@
   {% include "pagination_top.html" with qset=lenses request=request qset_range=lenses_range qset_total=lenses_count target="lenses" %}
 
   <div>
+    <input type="hidden" id="lenses-count" value="{{ lenses_count }}" >
     <form id="ids-form" method="POST">
       {% csrf_token %}
       {% include "lenses/lens_query_list.html" with lenses=lenses %}
