Added URL for image downloads; set size of images to exact number of pixels on lens detail page

--- a/lenses/templates/lenses/lens_detail.html
+++ b/lenses/templates/lenses/lens_detail.html
@@ -147,7 +147,7 @@
 	      {{ band }}
 	    </div>
 	    <div class="container">
-	      <img src="{{ image.image.url }}">
+	      <img src="{{ image.image.url }}" width="170" height="170">
 	      <div class="overlay">
 		<button type="button" class="sled-modal jb-overlay-button-1" data-form-url="{% url 'sled_data:imaging-detail' image.id %}">
 		  <img src="{% static 'icons/eye-fill.svg' %}">
