--- a/templates/master_header.html
+++ b/templates/master_header.html
@@ -8,8 +8,7 @@
     <title>Strong Gravitational Lens database</title>
     <link rel="icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">    
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/vendors/tooltipster.bundle.min.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'css/vendors/tooltipster-sideTip-shadow.min.css' %}" />
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <link href="{% static 'css/jb_style.css' %}" rel="stylesheet" />
     <link href="{% static 'css/sled-global.css' %}" rel="stylesheet" />
     {% block extrastyles %}
@@ -18,7 +17,8 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous" type="text/javascript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
     <script src="https://use.typekit.net/pkl4bli.js" type="text/javascript"></script>
-    <script src="{% static 'js/tooltipster.bundle.min.js' %}" type="text/javascript"></script>
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <script src="{% static 'js/global_search.js' %}" type="text/javascript"></script>
     <script type="text/javascript">
       WebFont.load({
 	  google: {
@@ -71,25 +71,45 @@
     
     <!-- Top navigation bar -->
     <div class="jb-navbar-container">
-      <a href="{% url 'home:homepage' %}" class="jb-nav-brand"><img src="{% static 'images/JB_Master Header_Logo.png' %}" loading="lazy" width="248" alt=""></a>
-      <div class="jb-navbar">
-	<nav role="navigation">
-          <a href="{% url 'home:homepage' %}">Home</a>
-          <a href="{% url 'lenses:lens-index' %}">Lenses</a>
-          <a href="{% url 'sled_groups:group-list' %}">Groups</a>
-          <a href="{% url 'sled_collections:collections-list' %}">Collections</a>
-          <a href="{% url 'sled_papers:paper-query' %}">Papers</a>
-          {% if user.is_authenticated %}
-          <a href="{% url 'sled_users:user-profile' %}">{{ user.username }}</a>
-	  {% if user.is_staff %}
-          <a href="{% url 'sled_users:user-admin' %}">Admin</a>
-	  {% endif %}	
-          <a href="{% url 'logout'%}" class="jb-navbar-login"><span class="text-span">Logout</span></a>
-          {% else %}
-          <a href="{% url 'login'%}" class="jb-navbar-login"><span class="text-span">Login</span></a>
-          {% endif %}
-	</nav>
-      </div>
+      <table class="jb-navbar-container-table">
+	<tr>
+	  <td style="width:300px;">
+	    <a href="{% url 'home:homepage' %}" class="jb-nav-brand"><img src="{% static 'images/JB_Master Header_Logo.png' %}" loading="lazy" width="248" alt=""></a>
+	  </td>
+	  <td style="width:50px;text-align:center">
+	    <img style="height:25px;" src="{% static 'icons/search.svg' %}" id="global_search2">
+	  </td>
+	  <td style="width:150px;">
+	    <input type="hidden" id="global_search" data-url="{% url 'api:global-search-view' %}" />
+	  </td>
+	  <td>
+	    {% if user.is_authenticated %}
+	    <a href="{% url 'logout'%}" class="jb-navbar-login"><span class="text-span">Logout</span></a>
+	    {% else %}
+	    <a href="{% url 'login'%}" class="jb-navbar-login"><span class="text-span">Login</span></a>
+	    {% endif %}
+	  </td>
+	</tr>
+	<tr>
+	  <td colspan="4">
+	    <div class="jb-navbar">
+	      <nav role="navigation">
+		<a href="{% url 'home:homepage' %}">Home</a>
+		<a href="{% url 'lenses:lens-index' %}">Lenses</a>
+		<a href="{% url 'sled_groups:group-list' %}">Groups</a>
+		<a href="{% url 'sled_collections:collections-list' %}">Collections</a>
+		<a href="{% url 'sled_papers:paper-query' %}">Papers</a>
+		{% if user.is_authenticated %}
+		<a href="{% url 'sled_users:user-profile' %}">{{ user.username }}</a>
+		{% endif %}
+		{% if user.is_staff %}
+		<a href="{% url 'sled_users:user-admin' %}">Admin</a>
+		{% endif %}	
+	      </nav>
+	    </div>
+	  </td>
+	</tr>
+      </table>
     </div>
 
     
@@ -101,9 +121,11 @@
 
   <script type="text/javascript">
     {# This needs to be at the end of the html, otherwise the animation does not work #}
-      $("#alert-message").fadeTo(2000,500).slideUp(500,function(){
-	  $("#alert-message").slideUp(500);
-      });
+    $("#alert-message").fadeTo(2000,500).slideUp(500,function(){
+	$("#alert-message").slideUp(500);
+    });
+    
+    global_search_autocomplete('global_search');
   </script>
     
 </html>
