--- a/home/templates/home/activity_home.html
+++ b/home/templates/home/activity_home.html
@@ -31,18 +31,36 @@
 
 	  
           {% if action.verb == "AddHome" %}
-	  <a href="{{ action.action_object|get_ad_col_url }}" target="_blank">{{ N }} {% singular_or_plural action.action_object.item_type N %}</a>
-	  {{ N|pluralize:"was,were" }} added by {{ action.actor.id|get_user_link|safe }}
+	  {% if N > 1 %}
+	  <a href="{{ action.action_object|get_ad_col_url }}" target="_blank">{{ N }} {% singular_or_plural action.action_object.item_type N %}</a> were
+	  {% else %}
+	  {% with action.action_object.myitems.all|first as item %}
+	  <a href="{{ item.get_absolute_url }}" target="_blank">{{ item }}</a> was
+	  {% endwith %}
+	  {% endif %}
+	  added by {{ action.actor.id|get_user_link|safe }}
 
 
 	  {% elif action.verb == "CedeOwnershipHome" %}
+	  {% if N > 1 %}
 	  <a href="{{ action.action_object|get_ad_col_url }}" target="_blank">{{ N }} {% singular_or_plural action.action_object.item_type N %}</a>
+	  {% else %}
+	  {% with action.action_object.myitems.all|first as item %}
+	  <a href="{{ item.get_absolute_url }}" target="_blank">{{ item }}</a>
+	  {% endwith %}
+	  {% endif %}	  
 	  changed owner from {{ action.data.previous_id|get_user_link|safe }} to {{ action.data.next_id|get_user_link|safe }}
 
 
 	  {% elif action.verb == "UpdateHome" %}
-	  <a href="{{ action.action_object|get_ad_col_url }}" target="_blank">{{ N }} {% singular_or_plural action.action_object.item_type N %}</a>
-	  {{ N|pluralize:"was,were" }} updated by {{ action.actor.id|get_user_link|safe }}
+	  {% if N > 1 %}
+	  <a href="{{ action.action_object|get_ad_col_url }}" target="_blank">{{ N }} {% singular_or_plural action.action_object.item_type N %}</a> were
+	  {% else %}
+	  {% with action.action_object.myitems.all|first as item %}
+	  <a href="{{ item.get_absolute_url }}" target="_blank">{{ item }}</a> was
+	  {% endwith %}
+	  {% endif %}	  
+	  updated by {{ action.actor.id|get_user_link|safe }}
 
 
 	  {% elif action.verb == "AcceptNewUserHome" %}
@@ -50,8 +68,14 @@
 	  
 
 	  {% elif action.verb == "MadePublicHome" %}
-	  <a href="{{ action.action_object|get_ad_col_url }}" target="_blank">{{ N }} {% singular_or_plural action.action_object.item_type N %}
-	  {{ N|pluralize:"was,were" }} made public by {{ action.actor.id|get_user_link|safe }}
+	  {% if N > 1 %}
+	  <a href="{{ action.action_object|get_ad_col_url }}" target="_blank">{{ N }} {% singular_or_plural action.action_object.item_type N %} were
+	  {% else %}
+	  {% with action.action_object.myitems.all|first as item %}
+	  <a href="{{ item.get_absolute_url }}" target="_blank">{{ item }}</a> was
+	  {% endwith %}
+	  {% endif %}	  
+	  made public by {{ action.actor.id|get_user_link|safe }}
 
 	  
 	  {% endif %}
