Email links are now correct in any finalizeTask and the password reset email (the former uses the hard coding of sled.astro.unige.ch in the /admin/sites/ panel and the latter forms the domain from request.get_hostname())

--- a/lenses/templates/lenses/lens_query.html
+++ b/lenses/templates/lenses/lens_query.html
@@ -436,7 +436,7 @@
 	      <td>{{ form.resolution_min.errors }}</td>
 	      <td>{{ form.resolution_min }}</td>
               <td>
-		<div class="sled-help-tooltip"><label>&lt; Resolutiion &lt;</label></div>
+		<div class="sled-help-tooltip"><label>&lt; Resolution &lt;</label></div>
 		<div class="sled-help-tooltip-content">Set the min. and max. resolution [arcsec].</div>
 	      </td>
 	      <td>{{ form.resolution_max }}</td>
