--- a/sled_papers/templates/sled_papers/paper_query.html
+++ b/sled_papers/templates/sled_papers/paper_query.html
@@ -42,7 +42,7 @@
 	<tr>
           <th>Author(s)</th>
           <th>Title</th>
-          <th style="width:135px;">Number of Lenses</th>
+          <th style="width:135px;">Number of Systems</th>
 	</tr>
       </thead>
       <tbody>
